updated: design for good site

--- a/homepage/good.html
+++ b/homepage/good.html
@@ -8,39 +8,44 @@
   <body>
     <div class="center-box">
       <div class="container">
-        <div class="line"></div>
         <div class="profile">
-          <h1>Manpreet</h1>
           <img src="me.jpg" alt="personal image" />
+          <h1>manpreet</h1>
+          <div class="tagline">
+            Discovering and learning new things, byte by byte.
+          </div>
         </div>
 
         <div class="content">
           <div class="bio">
-            <p>
-              I As a third-year computer science student, I am passionate about
-              technology and have a strong interest in backend engineering.
-            </p>
-            <p>
-              Currently, I work as a TA for a computer science course, where I
-              lead weekly discussions, grade assignments, and provide one-on-one
-              support to students. My experience in programming languages such
-              as Java, Python, and Javascript has allowed me to tackle complex
-              coding problems with ease, and my dedication to learning has
-              helped me to develop expertise in database management and API
-              development.
-            </p>
-
-            <p>
-              In my free time, I enjoy playing video games and exploring new
-              technologies. I aam excited to continue deepening my understanding
-              of backend engineering and gaining more practical experience in
-              the field as I progress in my studies.
-            </p>
-
-            <p>I can make full stack applications.</p>
+            <div class="bio-point">
+              <div class="bio-name">About</div>
+              <div class="left-border">
+                I am a third-year computer science student passionate about
+                technology and have a strong interest in backend engineering.
+              </div>
+            </div>
+            <div class="bio-point">
+              <div class="bio-name">Experience</div>
+              <div class="left-border">
+                I work as a TA for a computer science course, where I lead
+                weekly lab sessions, grade assignments, and provide one-on-one
+                support to students. I have experience in programming languages
+                such as Java, Python, and Javascript.
+              </div>
+            </div>
+            <div class="bio-point">
+              <div class="bio-name">Interests</div>
+              <div class="left-border">
+                In my free time, I enjoy playing video games and exploring new
+                technologies. I want to improve my understanding of backend
+                engineering and gaining more practical experience in the field
+                as I progress in my studies.
+              </div>
+            </div>
           </div>
-          <div class="important1">
-            <strong>Some courses I have completed</strong>
+          <div class="importantPoints bio-point">
+            <strong class="bio-name">Some courses I have completed</strong>
             <ul>
               <li>Introduction to Database Concepts</li>
               <li>Introduction to Software engineering</li>
@@ -48,7 +53,6 @@
             </ul>
           </div>
         </div>
-        <div class="line"></div>
       </div>
     </div>
   </body>
